<resources>
    <string name="app_name">Babble</string>
    <string name="email">Email or Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Sign in</string>
    <string name="need_an_account_signup">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcone">Welcome back,</string>
    <string name="login_to__continue">Sign in to continue</string>
    <string name="get_on_board">Hey, get on board</string>
    <string name="signup_to__continue">Sign up to continue</string>
    <string name="name">Name</string>
    <string name="phone">Phone No.</string>
    <string name="on_capture_expense_error">An error occurred while capturing expense image</string>
    <string name="on_permissions_denied">Camera permission are required for Capture Expense feature</string>
    <string name="country_prompt">Choose a country</string>
    <string name="email_add">Email</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="creating_account">Please wait, we are creating an account for you…</string>
    <string name="remember_me">Remember me and keep me logged in</string>
    <string name="forgot_pwd_instruct">Enter your email address and we\'ll send you the instructions to reset your password</string>
    <string name="resetPwd">Reset password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verified">Verified</string>
    <string name="verification">Verification</string>
    <string name="verificationInfo">We will send you a <b>One Time Password</b> on your Phone number</string>
    <string name="getOtp">Generate OTP</string>
    <string name="otp_sent_on_mobile">Please type the verification code sent to </string>
    <string name="verify_and_create_account">Verify &amp; Continue</string>
    <string name="didnot_receive_otp">Didn\'t receive the verification OTP?</string>
    <string name="resend_sms">Resend again</string>
    <string name="on_otp_verification_success">Thank you! Your Mobile number has been <b>successfully verified</b></string>
    <string name="error_occured_while_sending_sms">Failed to send SMS, kindly check the mobile number entered</string>
    <string name="error_occured_while_verifying_otp">The OTP entered is incorrect, kindly renter the correct OTP</string>
    <string name="timeout">30</string>
    <string name="profile_imageview">profile_image</string>
    <string name="dashboard">Dashboard</string>
    <string name="quick_insights">Quick Insights</string>
    <string name="profile">Profile</string>
    <string name="view_transactions">View Transactions</string>
    <string name="group_expenditures">Group Expenditures</string>
    <string name="details">Details</string>
    <string name="last_expenses_involved_in">LAST TRANSACTIONS</string>
    <string name="view_details">View Details</string>
    <string name="instant_expense">Add an expense instantly</string>
    <string name="captureExpense">Capture Expense</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="add_new_group">Add New Group</string>
    <string name="capture_image">capture image</string>
    <string name="switch_camera">switch camera lens</string>
    <string name="new_expense">Expense Info</string>
    <string name="item_name">Item Name</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="select_date">Select Date</string>
    <string name="selectable_dropdown_image">selectable_dropdown_image</string>
    <string name="image_of_item_paid_for">Image of item paid for</string>
    <string name="group_info">Group Info</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="select_currency">Select Currency</string>
    <string name="add_participants">Add Participants</string>
    <string name="cancel">Cancel</string>
    <string name="add_expense">Add Expense</string>
    <string name="save">Save</string>
    <string name="captured_image_preview">Captured expense preview</string>
    <string name="back_button">Go back from preview</string>
    <string name="people">People</string>
    <string name="group">Group</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="navigate_back">navigate back</string>
    <string name="item_image">Item image</string>
    <string name="remove_participant">Remove participant</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_image">Change Image</string>
    <string name="signout">SignOut</string>
    <string name="contact_details">Contact Details</string>
    <string name="country">Country</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="ruppee">₹</string>
    <string name="search_button_to_search_participants">Search Button to search participants by email</string>
    <string name="add_button_to_add_participants_in_group">Add button to add participants in group</string>
    <string name="create">Create</string>
    <string name="select_image">Select Image</string>
    <string name="otp_verify_error">Failed to verify OTP, kindly check the OTP entered</string>
    <string name="invalid_mobile_error">Invalid Mobile Number Entered</string>
    <string name="admin">Admin</string>
    <string name="equally">Equally</string>
    <string name="unequally">Unequally</string>
    <string name="split_amount_by">Split Amount By</string>
    <string name="split_amount">Split Amount</string>
    <string name="total">Total</string>
    <string name="error_icon">Error icon</string>
    <string name="retry">Retry</string>
    <string name="select_group">Select Group Name</string>
    <string name="select_expense_owner">Select Amount Paid By</string>
    <string name="search_by_email">Search By Email</string>
    <string name="groups">Groups</string>
    <string name="members">Members</string>
    <string name="last_expense_added">Last Expense added:</string>
    <string name="no_expense_added_yet">No Expenses Found \nClick on + button to add new expense</string>
    <string name="no_groups_added">No Groups Found \nClick on below button to add new group</string>
    <string name="add_group">Add Group</string>
    <string name="no_groups_found_placeholder_image">no_groups_found_placeholder_image</string>
    <string name="checking_for_groups">Checking for Groups…</string>
    <string name="collapse">Collapse</string>
    <string name="to">to</string>
    <string name="click_for_more_details">Click for more details…</string>
    <string name="on">on</string>
    <string name="hide_graph">Hide</string>
    <string name="settle_up">Settle Up</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="amount_paid_in_each_group">Amount paid in each group</string>
    <string name="bar_chart_desc">Total Expenses in Current Yr.</string>
    <string name="no_expense_found_in_current_yr">No Expenses found in Current Year</string>
    <string name="last_expense_added_self">Last expense added by You</string>
    <string name="last_expense_added_other">Last expense added by</string>
    <string name="pay">Pay</string>
    <string name="no_expense_found_in_selected_group">No expense found in selected group</string>
    <string name="no_transactions_found_in_selected_group">No transactions found in selected group</string>
    <string name="an_error_occured_while_fetching_member_info_from_server">An error occurred while fetching member info from server</string>
    <string name="contributors">Contributors</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="decline">Decline</string>
    <string name="payment_icon">Payment Icon</string>
    <string name="payment_confirmation">Confirming payment of AMOUNT from FROM_USER to TO_USER</string>
</resources>