<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addNewGroupNavDirections"
            type="androidx.navigation.NavDirections" />

        <variable
            name="dashBoardViewModel"
            type="com.viceboy.babble.ui.screens.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_placeholder_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivPlaceholderNoGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_groups_found_placeholder_image"
            android:scaleType="centerCrop"
            android:src="@drawable/no_data_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/tvNoGroupsFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/ivPlaceholderNoGroups"
            app:placeholderSpanText='@{@string/no_groups_added}'
            tools:text="@string/no_groups_added" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:onClick="@{() -> dashBoardViewModel.navigateTo(addNewGroupNavDirections.actionId)}"
            android:padding="10dp"
            android:text="@string/add_group"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoGroupsFound" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>