<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".ui.screens.forgotPassword.ForgotPasswordFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="30dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lotForgotPwd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="anime/forgot_password_logo.json"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/RegistrationHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/forgot_password"
            android:visibility="invisible"
            app:animateVisibility="@{true}"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/lotForgotPwd" />

        <TextView
            android:id="@+id/tvForgotPwdInstructions"
            style="@style/RegistrationSubHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:gravity="start"
            android:text="@string/forgot_pwd_instruct"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilResetEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPwdInstructions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etResetEmail"
                style="@style/TextEditInputAppearance"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPwdInstructions"
                tools:layout_editor_absoluteX="124dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/flContainerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilResetEmail">

            <Button
                android:id="@+id/btn_ResetPassword"
                android:background="@drawable/bg_button"
                style="@style/SignUpInButton"
                android:text="@string/resetPwd" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/pbLogin"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="false"
                app:lottie_fileName="anime/email_sent.json"
                app:lottie_loop="true" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvNewUserLink"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/flContainerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/voces_regular"
            android:text="@string/back_to_login"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/colorPrimaryDark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
